<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="88dp"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="horizontal">
    <LinearLayout
        style="@style/personal_ll">
        <TextView
            android:id="@+id/km_person"
            style="@style/theme_25_w_w"
            android:text="0"/>
        <TextView
            android:id="@+id/my_distance_utils"
            style="@style/black_12_w_w"
            android:text="@string/person_km"/>
    </LinearLayout>
    <LinearLayout
        style="@style/personal_ll">
        <TextView
            android:id="@+id/min_person"
            style="@style/theme_25_w_w"
            android:text="0"/>
        <TextView
            style="@style/black_12_w_w"
            android:text="@string/person_min"/>
    </LinearLayout>
    <LinearLayout
        style="@style/personal_ll">
        <TextView
            android:id="@+id/kcal_person"
            style="@style/theme_25_w_w"
            android:text="0"/>
        <TextView
            style="@style/black_12_w_w"
            android:text="@string/person_kcal"/>
    </LinearLayout>
</LinearLayout>