<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <include layout="@layout/head_layout" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/complete_icon"
        android:scaleType="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"/>
    <TextView
        style="@style/xl_20_333333"
        android:text="@string/invate_success"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"/>
    <TextView
        style="@style/xl_14_a5a5a5"
        android:text="@string/invate_tips"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/item_question_bg"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="2"
            android:text="@string/invate_title"
            android:textColor="@color/color_333333"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/invateCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:background="@null"
            android:textColorHighlight="@color/color_a5a5a5"
            android:textColorHint="@color/color_a5a5a5"
            android:hint="@string/invate_tips1"
            android:textColor="@color/color_333333"
            android:textSize="17sp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/bottom_shadow_bg">
        <Button
            android:id="@+id/complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            style="@style/white_18"
            android:text="@string/invate_indent"
            android:background="@drawable/xl_button_sure"/>
    </RelativeLayout>

</LinearLayout>