<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/batteryType"
                    style="@style/black_21_w_w"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:id="@+id/batteryAddress"
                    style="@style/black_13_w_w"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="2.5dp"
                    android:drawableLeft="@drawable/location_icon"
                    android:drawablePadding="15dp"
                    android:ellipsize="end"
                    android:singleLine="true" />
            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/color_line" />

            <RelativeLayout
                android:id="@+id/go_nav"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/batteryGo"
                    style="@style/black_14_w_w"
                    android:layout_centerInParent="true"
                    android:drawablePadding="2dp"
                    android:drawableTop="@drawable/gps_icon_bg"
                    android:gravity="center"
                    android:text="@string/battery_go" />
            </RelativeLayout>
        </LinearLayout>

        <View style="@style/line" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/b_distance"
                    style="@style/theme_25_w_w"
                    android:text="0"/>
                <TextView style="@style/black_12_w_w"
                    android:text="@string/battery_distance"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/b_remain"
                    style="@style/theme_25_w_w"
                    android:text="0"/>
                <TextView style="@style/black_12_w_w"
                    android:text="@string/battery_remain"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/haveData"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/b_life"
                    style="@style/theme_25_w_w"
                    android:text="0"/>
                <TextView style="@style/black_12_w_w"
                    android:text="@string/battery_life"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/noData"
                android:visibility="gone"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    style="@style/theme_15_w_w"
                    android:text="@string/battery_show_distance"/>
                <TextView style="@style/tip_red_12_w_w"
                    android:background="@drawable/theme_bg_coners"
                    android:layout_marginTop="5dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingRight="6dp"
                    android:paddingLeft="6dp"
                    android:text="@string/battery_show_to_set"/>
            </LinearLayout>

        </LinearLayout>
        <View style="@style/line"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="47dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">
                <TextView style="@style/black_13_w_w"
                    android:text="@string/battery_price"/>
                <TextView
                    android:id="@+id/b_price"
                    style="@style/theme_13_w_w"
                    android:text="0.0"/>
                <TextView
                    android:id="@+id/priceUnit"
                    style="@style/black_13_w_w"
                    android:text="@string/battery_price_unit"/>
            </LinearLayout>
            <TextView
                android:id="@+id/b_list"
                style="@style/tip_red_13_w_w"
                android:text="@string/battery_tips"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"/>
        </RelativeLayout>
        <View style="@style/line"/>
    </LinearLayout>
</LinearLayout>