<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <include layout="@layout/head_layout" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:background="@color/color_white">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="center"
            android:src="@drawable/wallet_picture"/>
        <TextView
            android:id="@+id/charge"
            style="@style/black_17_w_w"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/wallet_charge"/>
        <Button
            android:id="@+id/btn_deposit"
            android:layout_width="113dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@color/color_white"
            android:textSize="14sp"
            android:text="@string/wallet_rechrge"
            android:background="@drawable/genaral_btn_click_bg_with_gradient"/>
    </LinearLayout>
    <View style="@style/line"/>
    <View style="@style/line"
        android:layout_marginTop="10dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/color_white">
        <TextView
            style="@style/deep_gray_13_w_w"
            android:text="@string/wallet_stype"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_tip_red"
            android:textSize="13sp"
            android:text="@string/wallet_money"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"/>

    </RelativeLayout>
    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:listSelector="@color/translate"
        android:scrollbars="none"
        android:divider="@color/translate">
    </ListView>
</LinearLayout>